# stellar_hackathon

./: .env.example  .gitignore  .mcp.json  .vercelignore  002-simulated-swap-safety-guard.md  AGENTS.md  README.md  eslint.config.js  landing.html  next.config.mjs  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  verify-implementation.sh  vitest.back.config.ts  vitest.config.ts
.codex/: project-instructions.md
.opencode/: AGENTS.md  opencode.json
.pi/: settings.json
BACK/: .env.example  README.md
BACK/solana/agent-action-guard/programs/agent-action-guard/: Cargo.toml
BACK/solana/agent-action-guard/programs/agent-action-guard/src/: lib.rs
BACK/solana/conditional-escrow-buy/programs/conditional-escrow-buy/: Cargo.toml
BACK/solana/conditional-escrow-buy/programs/conditional-escrow-buy/src/: lib.rs
FRONT/: .env.example  README.md
app/: layout.tsx  not-found.tsx  page.tsx  route.ts
back/: .env.example  README.md
docs/: MVP_CHECKLIST.md  README.md  back-architecture.html  functional-spec.md  phantom-external-transaction-contracts.md  swap-guard-explainer.html  task-breakdown.json  technical-spec.md
hosted/: app.test.ts  app.ts  appContracts.ts  server.ts  serverContracts.ts
learning-explanations/: external-ux-research.md
legacy/: tailwind.config.js  verify-implementation.sh
openspec/: config.yaml
public/: architecture-explainer.html
scripts/: bootstrap-conditional-devnet.mjs  build-favicon.mjs  compass-dashboard.html  compass-dashboard.mjs  compass-stellar-mcp.sh  dump-audit.mjs  e2e-pipeline-test.mjs  privy-setup.mjs  (+13 more)
(+697 files in other folders)
