[package]
name = "agent-action-guard"
version = "0.1.0"
description = "Oracle-gated action approvals for AI agent actions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_action_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
